<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Find5</string>
    <string name="category_gestures_title">Off screen gestures</string>
    <string name="double_tap_wake_title_head">Double tap to wake</string>
    <string name="double_tap_wake_summary_head">Double tap on screen will wake the device</string>
    <string name="camera_title_head">Camera</string>
    <string name="camera_summary_head">Draw a circle to start camera</string>
    <string name="music_title_head">Music</string>
    <string name="music_summary_head">Draw II, &lt; or &gt; to control music playback</string>
    <string name="torch_title_head">Torch</string>
    <string name="torch_summary_head">Draw a V to toggle torch</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_test">Test</string>
    <string name="category_suspend_cap">Suspend Limits</string>
    <string name="suspend_cap_freq">Core frequency limit</string>
    <string name="suspend_cap_core">Core number limit</string>
    <string name="disabled">Disabled</string>
    <string name="core">core</string>
    <string name="cores">cores</string>
    <string name="mhz">MHz</string>
    <string name="advanced_settings">Advanced</string>
</resources>
