<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/category_gestures_title" >	    <!-- s2w switch Options -->
	    <CheckBoxPreference
	        android:key="s2w_switch"
	        android:title="@string/s2w_switch_title_head"
	        android:summary="@string/s2w_switch_summary_head" />
	    <!-- s2w stroke Options -->
	    <ListPreference
	        android:key="s2w_stroke"
	        android:title="@string/s2w_stroke_title_head"
	        android:summary="@string/s2w_stroke_summary_head"
            android:dependency="s2w_switch"
	        android:entries="@array/s2w_stroke_entries"
	        android:entryValues="@array/s2w_stroke_entries_values" />
`		<!-- s2w min length -->
	    <ListPreference
	        android:key="s2w_length"
	        android:title="@string/s2w_length_title_head"
	        android:summary="@string/s2w_length_summary_head"
            android:dependency="s2w_switch"
	        android:entries="@array/s2w_length_entries"
	        android:entryValues="@array/s2w_length_entries_values" />
		<CheckBoxPreference
			android:key="double_tap"
			android:summary="@string/double_tap_wake_summary_head"
			android:title="@string/double_tap_wake_title_head" />
		<CheckBoxPreference
			android:key="camera"
			android:summary="@string/camera_summary_head"
			android:title="@string/camera_title_head" />
		<CheckBoxPreference
			android:key="music"
			android:summary="@string/music_summary_head"
			android:title="@string/music_title_head" />
		<CheckBoxPreference
			android:key="torch"
			android:summary="@string/torch_summary_head"
			android:title="@string/torch_title_head" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/category_vibrator">
        <org.omnirom.omnigears.device.VibratorStrengthPreference
	        android:key="vib_strength"
	        android:title="@string/vib_strength_title_head"
	        android:summary="@string/vib_strength_summary_head" />
	</PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_suspend_cap">
	    <org.omnirom.omnigears.device.SuspendFreqCap
	        android:key="suspend_cap_freq"
	        android:summary=""
	        android:title="@string/suspend_cap_freq" />
	    <org.omnirom.omnigears.device.SuspendCoreCap
	        android:key="suspend_cap_core"
	        android:summary=""
	        android:title="@string/suspend_cap_core" />
	</PreferenceCategory>
</PreferenceScreen>
